app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/*TODO: get rid of variables */

:root {
  --border-color: #DCDCDC;
  --navbar-height: 60px;
  --input-width: 450px;
}

html, #root, .app {
  height: 100%;
}

body {
  box-sizing: border-box;
  font-family: 'Muli';
  background-color: #F5F5F5;
  height: 100%;
}

button {
	font-family: 'Montserrat';
}

h2 {
  font-family: 'Libre Franklin';
  font-size: 50px;
}

h3 {
  font-size: 35px;
}

h4 {
  font-size: 25px;
}

.shadow {
  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.content {
  width: 800px;
  margin: auto;
  height: 100%;
}


.content-header {
  position: relative;
  height: 100px;
  padding: 25px 0px;
}

.content-header-buttons {
  position: absolute;
  right: 0;
  bottom: 30px;
}

.modal-open #root {
  -webkit-filter: blur(4px) grayscale(50%);
  transition: all 0.5s linear;
}

body.modal-open {
  overflow: hidden;
}

.modal-close-button {
  float: right;
  cursor: pointer;
}

.button {
  cursor: pointer;
  border: 1px solid #bdbdbd;
  border-bottom: 2px solid #d3d3d3;
  background: white;
  padding: 7px;
  border-radius: 7px;
}

.detail-content {
  border: 1px solid;
  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
  background: white;
  height: 100%
}

.detail-img {
  width: 100%;
  height: 280px;
  background-position: center;
  background-size: 700px;
}


.content-body {
  padding: 26px 40px;
}

.errors-list {
  color: red;
}

.group:after {
    content: "";
    display: block;
    clear: both;
}

